[gd_scene load_steps=2 format=2]

[ext_resource path="res://EnemyController.gd" type="Script" id=1]

[node name="EnemyController" type="Node2D"]
script = ExtResource( 1 )

[node name="PathUpdateTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ShootSwitchTimer" type="Timer" parent="."]
one_shot = true

[node name="Raycast" type="RayCast2D" parent="."]
enabled = true
collision_mask = 3

[connection signal="timeout" from="PathUpdateTimer" to="." method="_on_PathUpdateTimer_timeout"]
[connection signal="timeout" from="ShootSwitchTimer" to="." method="_on_ShootSwitchTimer_timeout"]
